# simreef

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  build.sh  submit.sh  vonmises.cpp
.build/: CMakeCache.txt  Makefile  cmake_install.cmake
.build/makeVersionFile/: SIMREEF_VERSION  SIMREEF_makeVersionFile.cmake  SIMREEF_makeVersionFile.cmake.in  ___SIMREEF_AUTOGEN_version.c  version.cpp  version.cpp.in
.build/src/: Makefile  cmake_install.cmake  simreef
.build/upcxx-utils/: CTestTestfile.cmake  Makefile  cmake_install.cmake
.build/upcxx-utils/makeVersionFile/: UPCXX_UTILS_makeVersionFile.cmake  UPCXX_UTILS_makeVersionFile.cmake.in  ___UPCXX_UTILS_AUTOGEN_version.c
.build/upcxx-utils/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
.build/upcxx-utils/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_log  test_progress_bar  test_timers  test_upcxx_utils  test_version
include/: options.hpp
jupyter_notebooks/: Density_backup.ipynb  comparison_runs.ipynb  crw_walkers.ipynb  density_time_plot.ipynb  plot_w_algae_reduction.ipynb
simforager/: CMakeDefinitions.txt  CMakeLists.txt  LICENSE.txt  README.md  build_easley.sh  build_hopper.sh
simforager/configs/: #simforager_example.config#  parameter_table.csv  simforager_example.config  simforager_template.config  simforager_template_brave.config  simforager_template_scared.config  simforager_template_social.config  simforager_test.config  simforager_test_scardy.config  simforager_test_scaredy.config  simforager_test_social.config  simreef_null.config  simreef_visual.config
simforager/include/: CLI11.hpp  bytell_hash_map.hpp  options.hpp  reef.hpp  tissue.hpp  utils.hpp  version.h  vonmises.hpp
simforager/src/: #utils.cpp#  CMakeLists.txt  main.cpp  reef.cpp  tissue.cpp  utils.cpp  vonmises.cpp
simforager/upcxx-utils/include/upcxx_utils/: flat_aggr_store.hpp  heavy_hitter_streaming_store.hpp  (+2 more)
simforager/upcxx-utils/src/: split_rank.cpp  timers.cpp  two_tier_aggr_store.cpp
simforager/upcxx-utils/test/: test_aggr_store.cpp
slurm/: biocomp-test.slurm  biocomp.slurm  condo.slurm  condo_hopper_social.slurm  debug.slurm  debug_easley.slurm  debug_hopper.slurm  easley_array.slurm  hopper_array.slurm  hopper_array_HT.slurm  hopper_array_HT_condo_brave.slurm  hopper_array_HT_condo_scared.slurm  hopper_array_HT_condo_social.slurm  slurm_hopper.sh
src/: main.cpp
substrate_generator/: Makefile  generate_params.py  reef_spa_bitmap.cpp  run_hopkins_factorial_128.sh  run_hopkins_factorial_512.sh  submit.sh  substrate_generate_image_458_set.slurm  substrate_generator_array.slurm  substrate_generator_mosaic.slurm
